feat: change path of img

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
         <nav class="navigation_panel">
             <div class="logo">
-                <a href="#"><img src="logo.png" alt="Logo" width="150px" height="75px"></a>
+                <a href="#"><img src="assets/logo.png" alt="Logo" width="150px" height="75px"></a>
             </div>
             <ul class="nav">
                 <li class="nav__item"><a class="nav__link active" href="#">Home</a></li>
