--- a/index.html
+++ b/index.html
@@ -14,43 +14,42 @@
         <nav class="navigation_panel">
             <div class="mobile" id="mobile">
                 <ul class="navigation_mobile" id="navigation_mobile">
-                    <li class="moile__item"><a class="mob__link active" href="#">HOME</a></li>
-                    <li class="moile__item"><a class="mob__link" href="#">ONE</a></li>
-                    <li class="moile__item"><a class="mob__link" href="#">TWO</a></li>
+                    <li class="moile__item"><a class="mob__link active" href="#one">ONE</a></li>
+                    <li class="moile__item"> <a class="mob__link" href="#two">TWO</a></li>
+                    <li class="moile__item"><a class="mob__link" href="#three">THREE</a></li>
                 </ul>
             </div>
             <div class="logo">
-                <a href="#"><img src="assets/logo.png" alt="Logo" width="150px" height="75px"></a>
+                <a href="#"><img src="logo.png" alt="Logo" width="150px" height="75px"></a>
             </div>
             <ul class="nav" id="fadeshow">
-                <li class="nav__item"><a class="nav__link active" href="#">Home</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">One</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">Two</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">Three</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">Four</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">Five</a></li>
+                <li class="nav__item"><a class="nav__link" href="#one">One</a></li>
+                <li class="nav__item"><a class="nav__link" href="#two">Two</a></li>
+                <li class="nav__item"><a class="nav__link" href="#three">Three</a></li>
+                <li class="nav__item"><a class="nav__link" href="https://www.linkedin.com/in/sakhan-siradzhov-ba53059b/">LinkedIn</a></li>
+                <li class="nav__item"><a class="nav__link" href="https://www.facebook.com/24ssg">Facebook</a></li>
             </ul>
 
         </nav>
     </header>
     <main class="main">
         <h2>Arsenal's Origin</h2>
-        <p class="text-justify">Arsenal floated between a handful of different pitches in the Plumstead area in their early years. They started life on Plumstead Common but, for their second season, <a class="link" href="#">Royal Arsenal</a> rented the nearby Sportsman Ground
-            on Plumstead Marshes. It was here that the Club would enter the London Senior Cup for the first time. Although they were beaten by Barnes in Round Two the wheels were in motion. With increasing support, the Club rented the Manor Ground the
-            following season.</p>
+        <p class="text-justify">Arsenal floated between a handful of different pitches in the Plumstead area in their early years. They started life on Plumstead Common but, for their second season,
+            <a class="link" href="#" id="one">Royal Arsenal</a> rented the nearby Sportsman Ground on Plumstead Marshes. It was here that the Club would enter the London Senior Cup for the first time. Although they were beaten by Barnes in Round Two the
+            wheels were in motion. With increasing support, the Club rented the Manor Ground the following season.</p>
 
 
         <p class="text-justify">Royal Arsenal’s first FA Cup appearance would take place here in 1889/90. During the same season Arsenal would secure a hat-trick of successes, winning the London Charity Cup, the Kent Senior Cup and the Kent Junior Cup. The Club were on the move
             once again the following year, this time to the Invicta Ground, where they would stay for nearly six years. An overall increase in playing success meant only one thing for the Arsenal – professionalism. This shocked football authorities and
-            the Club were expelled from the London FA and boycotted by many southern clubs. During the same close season, the club changed their name to <a class="link" href="#">Woolwich Arsenal</a>.</p>
+            the Club were expelled from the London FA and boycotted by many southern clubs. During the same close season, the club changed their name to <a class="link" href="#" id="two">Woolwich Arsenal</a>.</p>
 
 
         <p class="text-justify">An increase in rent at the Invicta Ground meant that Arsenal had to move back to their old Manor Ground home, which they purchased outright; this would be the Club’s home until their move to Highbury in 1913. Shortly afterwards, their application
             to the Football League’s Second Division was successful. Arsenal’s success was steady throughout the latter part of the 19th century and their league position improved until they achieved promotion to Division One in 1903. Three years later
             they reached the Semi-Final of the FA Cup two seasons running. However, Plumstead was not the ideal site for Arsenal and with the financial situation worsening and relegation threatening, up stepped Fulham chairman Henry Norris. Norris recognised
             the need for a move, ear-marking Highbury as a suitable site. And, after relegation in 1913, the Club moved to its new home. Within two years of the move, ‘Woolwich’ was dropped from their title and the Club became known as ’<a class="link"
-                href="#">Arsenal FC</a>’. At the end of World War One the First Division was increased by two clubs, of which Arsenal were one. And under the guidance of new manager Leslie Knighton, Arsenal spent the first six seasons of peacetime achieving
-            some moderate success. Chairman Norris wanted more and, in 1925, he advertised for a new manager. One particular applicant, a Yorkshireman by the name of Herbert Chapman, would change the Club forever.</p>
+                href="#" id="three">Arsenal FC</a>’. At the end of World War One the First Division was increased by two clubs, of which Arsenal were one. And under the guidance of new manager Leslie Knighton, Arsenal spent the first six seasons of peacetime
+            achieving some moderate success. Chairman Norris wanted more and, in 1925, he advertised for a new manager. One particular applicant, a Yorkshireman by the name of Herbert Chapman, would change the Club forever.</p>
     </main>
     <footer class="footer">
         <div class="current_data">
