feat: change logo path

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </ul>
             </div>
             <div class="logo">
-                <a href="#"><img src="logo.png" alt="Logo" width="150px" height="75px"></a>
+                <a href="#"><img src="assets/logo.png" alt="Logo" width="150px" height="75px"></a>
             </div>
             <ul class="nav" id="fadeshow">
                 <li class="nav__item"><a class="nav__link" href="#one">One</a></li>
